Include source code links and spacing for projects

--- a/index.html
+++ b/index.html
@@ -38,20 +38,36 @@
       </div>
       <div class="projects">
         <div class="projects-left">
-            <p><a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a> is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.</p><br>
-            <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" = src="images/potluck.png" alt="Picture of Potluck Project"></a>
+            <p>
+              <a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a>
+              is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.
+              <a href="https://github.com/sarahikeda/bringchips"><b>Source Code</b></a><br>
+            </p>
+            <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" src="images/potluck.png" alt="Picture of Potluck Project"></a>
         </div>
           <div class= "projects-right col-md-6">
-            <p><a href="https://github.com/sarahikeda/InSession"><b>InSession</b></a> is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
-            <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
+            <p>
+              <a href="http://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
+              Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
+              <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Source Code</b></a><br>
+            </p>
+            <a href="https://github.com/sarahikeda/decisionsdecisions"><img class="decisions" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project" /></a>
           </div>
           <div class="big-break"></div>
           <div class= "projects-left col-md-6">
-          <p><a href="http://sarahikeda.github.io/oneus/"><b>OneUs</b></a> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
+            <p>
+              <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a>
+              is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.
+            </p>
+            <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
           </div>
           <div class= "projects-right col-md-6">
-         <p><a href="http://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions.</b></a> Having trouble figuring out what to do today? We make the decision based on your mood and energy level. </p>
-         </div>
+            <p>
+              <a href="https://sarahikeda.github.io/oneus/"><b>OneUs</b></a>
+              is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).
+            </p>
+            <a href="https://sarahikeda.github.io/oneus/"><img class="oneus" src="images/oneus.jpeg" alt="Picture of Project"></a>
+          </div>
       <div class="break"></div>
     </div>
   </body>
