Fix decisions project link to link directly to static page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
               <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Source Code</b></a><br>
             </p>
-            <a href="https://github.com/sarahikeda/decisionsdecisions"><img class="decisions" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project" /></a>
+            <a href="http://sarahikeda.github.io/decisionsdecisions/"><img class="decisions" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project" /></a>
           </div>
           <div class="big-break"></div>
           <div class= "projects-left col-md-6">
