Add link to farmersmarket ruby exercise

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
             </p>
             <a href="https://sarahikeda.github.io/oneus/"><img class="oneus" src="images/oneus.jpeg" alt="Picture of Project"></a>
           </div>
+          <div class="big-break"></div>
+          <div class= "projects-left col-md-6">
+            <p>
+              <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
+              is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
+              <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
+            </p>
+          </div>
       <div class="break"></div>
     </div>
   </body>
