Remove page header class with weird line

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="page-header">
+      <div>
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
