--- a/irp.html
+++ b/irp.html
@@ -2,26 +2,18 @@
   <head>
      <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/irp.css">
-      <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="stylesheets/index.js" ></script>
       <title>Sarah Ing</title>
   </head>
   <body>
     <div class="container">
-        <ul class="navright">
-          <li id="about"><a href="#about">About Me</a></li>
-          <li id="projects"><a href="#projects">Projects</a></li>
-          <br>
-          <li><a href="SIResume.png" target="_blank">Resume</a></li>
-          <li id="contact"><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
-        </ul>
-      </div>
-
       <div class="main-info">
         <div class="intro">
           <p id="question">With the internet and sharing economy, <span style="font-weight: bold">strangers</span> are our new network. How can we use technology to create meaningful interactions between strangers?</p>
-          <p id="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>, I am on a quest to truly understand the humans we design technology for. I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
+          <p class="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>, I am on a quest to truly understand the humans we design technology for. I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
+          <p class="explanation">Want to help me along the way? <a href="mailto:sarahikeda@gmail.com">Let's talk!</a></p>
         </div>
     </div>
   </body>
