Change question wording

--- a/irp.html
+++ b/irp.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="main-info">
         <div class="intro">
-          <p id="question">With the internet and sharing economy, <span style="font-weight: bold">strangers</span> are our new network. How can we use technology to create meaningful interactions between strangers?</p>
+          <p id="question">With the internet and sharing economy, <span style="font-weight: bold">strangers</span> are our new network. How can we use technology to design meaningful interactions between strangers?</p>
           <p class="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>, I am on a quest to truly understand the humans we design technology for. I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
           <p class="explanation">If you're passionate about this too, <a href="mailto:sarahikeda@gmail.com">let's talk!</a></p>
         </div>
