Rename stylesheet to strangers and turn off background color animation

--- a/strangers.html
+++ b/strangers.html
@@ -1,7 +1,7 @@
 <html>
   <head>
      <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="stylesheets/irp.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/strangers.css">
       <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="stylesheets/index.js" ></script>
