Change about me wording for index and change project to coding projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
-          <li id="projects"><a href="#projects">Projects</a></li>
+          <li id="projects"><a href="#projects">Coding Projects</a></li>
           <br>
           <li><a href="SIResume.png" target="_blank">Resume</a></li>
           <li id="contact"><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
@@ -23,7 +23,9 @@
       <div class="main-info">
         <div class="bio">
           <img id="biopic" src="images/imagebio.jpg" alt="Picture of Sarah">
-          <p id="biotext">I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one <span style="font-weight: bold">creating</span>. So, I learned how to <a href="https://github.com/sarahikeda"span style="font-weight: bold">code</span></a>.</p>
+          <p id="biotext">Hello! I'm Sarah.
+            <br>
+            I am a <span style="font-weight: bold">service designer</span> with <a href="https://github.com/sarahikeda"span style="font-weight: bold">software engineering</a> roots. I believe in reinvention -- the ability to take learnings from one experience to the next. I'm passionate about approaching design problems systematically, with a human-centered focus. </p>
         </div>
         <div class="inspire">
           <h3>What Inspires Me:</h3>
