--- a/strangers.html
+++ b/strangers.html
@@ -12,7 +12,7 @@
       <div class="main-info">
         <div class="intro">
           <p id="question">With the internet and sharing economy, <span style="font-weight: bold">strangers</span> are our new network. How can we use technology to build on this -- to design meaningful interactions between strangers?</p>
-          <p class="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>,I am on a quest to truly understand the humans we design technology for. I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
+          <p class="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>,I am on a quest to truly understand the humans we design technology for. How do we design for trust? What makes us enjoy each other's company? I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
           <p class="explanation">If you want to come along on this journey, <a href="mailto:sarahikeda@gmail.com">let's talk!</a></p>
           <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow"><a href="https://sarahikeda.github.io"> About me. </a></p>
         </div>
