Remove link to coding

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
-          <li id="projects"><a href="#projects">Coding Projects</a></li>
+          <li id="contact"><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
+          <!-- <li id="projects"><a href="#projects">Coding Projects</a></li> -->
           <br>
           <li><a href="SIResume.png" target="_blank">Resume</a></li>
-          <li id="contact"><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/strangers">Stranger Research</a></li>
         </ul>
       </div>
       <div class="main-info">
