Add pdf file of resume

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li id="contact"><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
           <!-- <li id="projects"><a href="#projects">Coding Projects</a></li> -->
           <br>
-          <li><a href="SIResume.png" target="_blank">Resume</a></li>
+          <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Stranger Research</a></li>
         </ul>
       </div>
