--- a/strangers.html
+++ b/strangers.html
@@ -15,7 +15,7 @@
           <p class="explanation">As part of my M.A. in Digital Experience Design at <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design">Hyper Island</a>,I am on a quest to truly understand the humans we design technology for. How do we design for trust? What makes us enjoy each other's company? I am conducting an industry research project on 'stranger interaction' and what makes an experience impactful.</p>
           <p class="explanation">If you want to come along on this journey, <a href="mailto:sarahikeda@gmail.com">let's talk!</a></p>
           <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow">&nbsp<a href="https://sarahikeda.github.io">About me </a></p>
-          <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow">&nbsp<a class="muut" href="https://muut.com/designingforstrangers#!/designingforstrangers/">Discussion Group</a> <script src="//cdn.muut.com/1/moot.min.js"></script></p>
+          <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow">&nbsp<a class="muut" href="https://muut.com/designingforstrangers#!/designingforstrangers/">Discussion Group</a></p>
         </div>
         <br>
     </div>
