Add images for nhsbt project and write up

--- a/portfolio/nhsbt.html
+++ b/portfolio/nhsbt.html
@@ -1,8 +1,8 @@
 <html>
   <head>
      <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="stylesheets/portfolio.css">
-      <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="../stylesheets/portfolio.css">
+      <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <title>Sarah Ing</title>
@@ -13,7 +13,7 @@
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
-          <li id="projects"><a href="#projects">Coding Projects</a></li>
+          <li id="projects"><a href="https://sarahikeda.github.io/portfolio.html">Portfolio</a></li>
           <br>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Stranger Research</a></li>
@@ -21,62 +21,25 @@
       </div>
     </div>
     <div class="bio">
-      <p>Hello! I am an experience designer with a handy toolbox of programming and writing skills. I see myself as the user's enthusiast and champion the human-centered design process.</p>
-      <div id=break></div>
-      <p id="headline">DESIGN PROJECTS</p>
+      <p>Design Brief: How might we create a more adaptable blood supply for the NHSBT to meet ever changing needs?</p>
     </div>
-    <br>
     <div id="design-projects">
+      <img class="blood-type" src="../images/portfolio/bloodtype.png" alt="blood type">
       <div class="individual-project">
-        <a href="https://sarahikeda.github.io/portfolio/nhsbt"><img class="project-img" src="images/nhsbtemail.png" alt="nhsbt"></a>
+        <p class="write-up">9 in 10 people in Japan know their blood type because everything from soda to condoms revolve around it. Only 40% of those in the UK are aware of their blood type. How can we create this awareness?<br><br>
+        Based on our findings from user research and interviews with partnering organizations, we chose to focus on strengthening the value proposition for blood donors.</p>
       </div>
       <div class="individual-project">
-        <img class="project-img" src="images/travelzen.png" alt="pastoral scene">
+        <a href="https://sarahikeda.github.io/portfolio/nhsbt"><img class="project-img" src="../images/nhsbtemail.png" alt="nhsbt"></a>
       </div>
+
       <div class="individual-project">
-        <p>three</p>
+        <div class="contribution">
+          <a href="http://www.nhsbt.nhs.uk"><p>Client: NHSBT</p></a>
+          <p>Roles: Facilitation, User Interviews, Synthesis, Copywriting, Storytelling, Presentation</p>
+        </div>
       </div>
     </div>
     <br>
-    <p id="headline">CODING PROJECTS</p>
-    <div id="coding-projects">
-      <div class="individual-project">
-        <img class="project-img" src="images/sentiment.png" alt="sentiment app">
-      </div>
-    </div>
-
-      <!-- <div class="projects-left"> -->
-          <!-- <p>
-            <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="decisions" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project"></a>
-            <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
-            Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
-            <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Source Code</b></a><br>
-          </p> -->
-      <!-- </div> -->
-        <!-- <div class= "projects-right">
-          <p>
-            <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" src="images/potluck.png" alt="Picture of Potluck Project"></a>
-            <a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a>
-            is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.
-            <br><a href="https://github.com/sarahikeda/bringchips"><b>Source Code</b></a><br>
-          </p>
-        </div>
-        <div class= "projects-left">
-          <p>
-            <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
-            <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a>
-            is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.
-          </p>
-        </div> -->
-        <!-- <div class= "projects-right"> -->
-              <!-- <p>
-                <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
-                is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
-                <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
-              </p>
-            </div>
-        <div class="break"></div> -->
-      <!-- </div> -->
-    <!-- </div> -->
   </body>
 </html>
