--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,7 @@
         <img class="project-img" src="images/sentiment.png" alt="sentiment app">
       </div>
     </div>
+    <p id="headline">WEIRD PROJECTS</p>
 
       <!-- <div class="projects-left"> -->
           <!-- <p>
