--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About</a></li>
-          <li id="about"><a href="https://sarahing.squarespace.com/">Portfolio</a></li>
+          <li id="about"><a href="https://sarahing.squarespace.com/">Design</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
           <li></li>
