--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -11,7 +11,7 @@
       <div>
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
-          <li id="about"><a href="#about">About</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/about">About</a></li>
           <li id="about"><a href="https://sarahing.squarespace.com/">Design</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
