--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
           <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
-          <li></li>
         </ul>
       </div>
     </div>
@@ -37,5 +36,13 @@
         <img id="halloween" src="images/halloween.jpg" alt="Picture of Sarah">
       </div>
     </div>
+    <div class="break"></div>
+    <ul class="social-media-inspire">
+      <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
+      <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
+      <a href="https://www.linkedin.com/in/sarahing/"><img class="media-icons" src="images/socialicons/linkedin.png" alt="linkedin"></a>
+      <a href="mailto:sarahikeda@gmail.com"><img class="media-icons" src="images/socialicons/email.png" alt="email"></a></li>
+    </ul>
+    <div class="break"></div>
   </body>
 </html>
