Fix wording for plural

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </div>
     <div class="inspire">
       <h4>I'm ceaselessly curious/nosy. When I moved from NY to Portland, OR at 13, I created a survey and handed it out to my new classmates so I could learn about them. I didn't become the most popular kid at school but I did know everyone's favorite color. [If we meet, expect lots of questions.]</h4><br>
-        <h3 id="fist-pump"><span style="font-weight: bold">This makes me fist-pumpingly excited:</span></h3><br>
+        <h3 id="fist-pump"><span style="font-weight: bold">These things makes me fist-pumpingly excited:</span></h3><br>
         <h4>Empowerment. Creative tech. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a> <a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a> </h4>
         ---------------------------------------        ---------------------------------------
         ---------------------------------------
