--- a/about.html
+++ b/about.html
@@ -23,15 +23,11 @@
       <h4>I'm ceaselessly curious/nosy. When I moved from NY to Portland, OR at 13, I created a survey and handed it out to my new classmates so I could learn about them. I didn't become the most popular kid at school but I did know everyone's favorite color. [If we meet, expect lots of questions.]</h4><br>
         <h3 id="fist-pump"><span style="font-weight: bold">These things makes me fist-pumpingly excited:</span></h3><br>
         <h4>Empowerment. Creative tech. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a> <a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a> </h4>
-        ---------------------------------------        ---------------------------------------
-        ---------------------------------------
-        ---------------------------------------
+        <hr class="line-break"><br>
 
         <h4><a href="https://en.wikipedia.org/wiki/Sentiment_analysis">Sentiment analysis.</a> How do we teach computers to understand us and essentially, be human?
         </h4>
-        ---------------------------------------        ---------------------------------------
-        ---------------------------------------
-        ---------------------------------------
+        <hr class="line-break"><br>
         <h4>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes. </a>Bright wigs for Halloween.</h4><br>
         <img id="halloween" src="images/halloween.jpg" alt="Picture of Sarah">
       </div>
