Add link for coding and scuba diving

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <h4><a href="https://en.wikipedia.org/wiki/Sentiment_analysis">Sentiment analysis.</a> How do we teach computers to understand us and essentially, be human?
         </h4>
         <hr class="line-break"><br>
-        <h4>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes. </a>Bright wigs for Halloween.</h4><br>
+        <h4>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving. </a> <a href="https://medium.com/@Sarah_Ing/code-like-a-scuba-diver-a74dcb9df4">Coding and scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes. </a>Bright wigs for Halloween.</h4><br>
         <img id="halloween" src="images/halloween.jpg" alt="Picture of Sarah">
       </div>
     </div>
