--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
       </div>
     </div>
     <div class="break"></div>
-    <ul class="social-media-inspire">
+    <!-- <ul class="social-media-inspire">
       <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
       <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
       <a href="https://www.linkedin.com/in/sarahing/"><img class="media-icons" src="images/socialicons/linkedin.png" alt="linkedin"></a>
       <a href="mailto:sarahikeda@gmail.com"><img class="media-icons" src="images/socialicons/email.png" alt="email"></a></li>
-    </ul>
+    </ul> -->
   </body>
 </html>
