--- a/dreamswim/index.html
+++ b/dreamswim/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: DreamSwim
-subTitle: Find the perfect water experience for you.
+subTitle: Your perfect swim is waiting for you.
 ---
