Remove design link in nav

--- a/strangers.html
+++ b/strangers.html
@@ -9,6 +9,15 @@
   </head>
   <body>
     <div class="container">
+      <div>
+          <ul class="navright">
+            <li id="about"><a href="https://sarahikeda.github.io/about">About</a></li>
+  
+            <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
+            <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
+            <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+          </ul>
+        </div>
       <div class="main-info">
         <div class="intro">
           <p id="question">With the internet and sharing economy, <span style="font-weight: bold">strangers</span> are our new network. How can we use technology to build on this -- to design meaningful interactions between strangers?</p>
