--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
      <meta charset="utf-8">
+     <script type='text/javascript' src='config.js'></script>
+     <script type="text/javascript" src="stylesheets/index.js" ></script>
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-      <script type="text/javascript" src="stylesheets/index.js" ></script>
       <title>Sarah Ing</title>
   </head>
   <body>
@@ -14,7 +15,6 @@
         <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="https://sarahikeda.github.io/about">About</a></li>
-          <li id="about"><a href="https://sarahing.squarespace.com/">Design</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
