Add image of atrocity

--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -15,11 +15,13 @@
 
       <p>I wanted to create this work to capture the haunting, lingering nature of content. There have been many stories and many emotions before us and "Not Another Sad Light" reminds us of their presence.</p>
     </div>
+    <div class="portfolio-stream">
+      <img id="atrocity" src="assets/atrocities.jpg" alt="atrocity-lamp">
+    </div>
     <div id="lamp-vid">
       <video width="320" height="240" autoplay>
         <source src="assets/lamp.mp4" type="video/mp4">
       </video>
     </div>
-    <div class="photo"></div>
   </body>
 </html>
