Add another picture and increase size of vid

--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -17,9 +17,10 @@
     </div>
     <div class="portfolio-stream">
       <img id="atrocity" src="assets/atrocities.jpg" alt="atrocity-lamp">
+      <img id="friends" src="assets/lifelongfriends.jpg" alt="lifelongfriends">
     </div>
     <div id="lamp-vid">
-      <video width="320" height="240" autoplay>
+      <video width="450" height="240" autoplay>
         <source src="assets/lamp.mp4" type="video/mp4">
       </video>
     </div>
