--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -17,12 +17,20 @@
     </div>
     <div class="portfolio-stream">
       <img id="atrocity" src="assets/atrocities.jpg" alt="atrocity-lamp">
+      <img id="manchester" src="assets/manchester.jpg" alt="manchestertweet">
       <img id="friends" src="assets/lifelongfriends.jpg" alt="lifelongfriends">
     </div>
     <div id="lamp-vid">
-      <video width="450" height="240" autoplay>
+      <video width="525" height="240" autoplay loop>
         <source src="assets/lamp.mp4" type="video/mp4">
       </video>
     </div>
+    <div class="press">
+      <p>Exhibited</p>
+      <ul>
+        <li>Manchester International Festival, July 2017</li>
+        <li>BBC Live, July 2017</li>
+    </div>
+    <img id="creative50" src="assets/Creative50_web.jpg" alt="creative50">
   </body>
 </html>
