Change video, add creative 50 logo

--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -31,6 +31,6 @@
         <li>Manchester International Festival, July 2017</li>
         <li>BBC Live, July 2017</li>
     </div>
-    <img id="creative50" src="assets/Creative50_web.jpg" alt="creative50">
+    <img id="creative50" src="assets/Creative50_trans.png" alt="creative50">
   </body>
 </html>
