--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -25,12 +25,12 @@
         <source src="assets/lamp.mp4" type="video/mp4">
       </video>
     </div>
-    <div class="press">
+    <!-- <div class="press">
       <p>Exhibited</p>
       <ul>
         <li>Manchester International Festival, July 2017</li>
         <li>BBC Live, July 2017</li>
-    </div>
+    </div> -->
     <img id="creative50" src="assets/Creative50_trans.png" alt="creative50">
   </body>
 </html>
