--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -9,7 +9,7 @@
     <div class="description">
       <p>"Not Another Sad Light" is a work created in response to the Manchester International Festival's work, <a href="http://mif.co.uk/mif17-events/one-of-two-stories-or-both/">"One of Two Stories, or Both."</a> The radio series prompts the audience to examine how stories lend meanings to places left behind.</p>
 
-      <p>I remagined the idea of past stories through one lone storyteller -- a left behind lamp. The lamp, a singular object in an empty room, tells the story of past tales, of past tweets, by changing color with the tweet's emotion.</p>
+      <p>I reimagined the idea of past stories through one lone storyteller -- a left behind lamp. The lamp, a singular object in an empty room, tells the story of past tales, of past tweets, by changing color with the tweet's emotion.</p>
 
       <p>The tweets that were used from the last Manchester International Festival and were analyzed for their sentiment. Using the Philips Hue API, I programmed the light to change color with the sentiment, in tandem with a projection of words from the tweets. </p>
 
