--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
   <head>
      <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/about.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <title>Sarah Ing</title>
