Add padding between text and images, add not another sad light

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -25,6 +25,16 @@
         <p id="headline">CODING PROJECTS</p>
         <div class="individual-project">
           <p>
+              <a href="https://sarahikeda.github.io/notanothersadlight/"><video width="200" height="140" autoplay loop>
+              <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
+            </video></a><br>
+            <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another Sad Light</b></a>
+            was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. The light changes color based on the sentiment of tweets from the distant past. <br>
+            <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
+          </p>
+        </div>
+        <div class="individual-project">
+          <p>
             <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="project-img" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project"></a>
             <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
             Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
