--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -6,22 +6,22 @@
     <title>NOT ANOTHER SAD LIGHT</title>
   </head>
   <body>
+    <div id="lamp-vid">
+      <video width="600" height="340" autoplay loop>
+        <source src="assets/lamp.mp4" type="video/mp4">
+        </video>
+      </div>
     <h4>Not Another Sad Light</h4>
     <div class="description">
       <p>"Not Another Sad Light" is a work created in response to the Manchester International Festival's work, <a href="http://mif.co.uk/mif17-events/one-of-two-stories-or-both/">"One of Two Stories, or Both."</a> The radio series prompts the audience to examine how stories lend meanings to places left behind.</p>
 
       <p>I reimagined the idea of past stories through one lone storyteller -- a left behind lamp. The lamp, a singular object in an empty room, tells the story of past tales, of past tweets, by changing color with the tweet's emotion.</p>
 
-      <p>The tweets that were used from the last Manchester International Festival and were analyzed for their sentiment. Using the Philips Hue API, I programmed the light to change color with the sentiment, in tandem with a projection of words from the tweets. Each color symbolizes a different emotion -- </p>
+      <p>The tweets that were used from the last Manchester International Festival and were analyzed for their sentiment. Using the Philips Hue lightbulb and the Hue API, I programmed the light to deliberately change color with the sentiment, in tandem with a projection of words from the tweets. Each color symbolizes a different emotion -- blue hues for negative emotions, yellow for the positive ones.</p>
 
       <p>I wanted to create this work to capture the haunting, lingering nature of content. There have been many stories and many emotions before us and "Not Another Sad Light" reminds us of their presence.</p>
     </div>
     <div class="portfolio-stream">
-      <div id="lamp-vid">
-        <video width="525" height="240" autoplay loop>
-          <source src="assets/lamp.mp4" type="video/mp4">
-          </video>
-        </div>
       <img id="atrocity" src="assets/atrocities.jpg" alt="atrocity-lamp">
       <img id="manchester" src="assets/manchester.jpg" alt="manchestertweet">
       <img id="friends" src="assets/lifelongfriends.jpg" alt="lifelongfriends">
