Add navigation link and title

--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -6,14 +6,25 @@
     <title>NOT ANOTHER SAD LIGHT</title>
   </head>
   <body>
+    <div class="container">
+      <div>
+        <p class="name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
+        <ul class="navright">
+          <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
+          <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+        </ul>
+      </div>
+    </div>
     <div id="lamp-vid">
       <video width="600" height="340" autoplay loop>
         <source src="assets/lamp.mp4" type="video/mp4">
         </video>
       </div>
-    <h4>Not Another Sad Light</h4>
     <div class="description">
-      <p>"Not Another Sad Light" is a work created in response to the Manchester International Festival's work, <a href="http://mif.co.uk/mif17-events/one-of-two-stories-or-both/">"One of Two Stories, or Both."</a> The radio series prompts the audience to examine how stories lend meanings to places left behind.</p>
+      <h4>Not Another SAD Light</h4>
+      <p>"Not Another SAD Light" is a work created in response to the Manchester International Festival's work, <a href="http://mif.co.uk/mif17-events/one-of-two-stories-or-both/">"One of Two Stories, or Both."</a> The radio series prompts the audience to examine how stories lend meanings to places left behind.</p>
 
       <p>I reimagined the idea of past stories through one lone storyteller -- a left behind lamp. The lamp, a singular object in an empty room, tells the story of past tales, of past tweets, by changing color with the tweet's emotion.</p>
 
