--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
        <ul class="social-media">
         <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
         <a href="https://www.linkedin.com/in/sarahing/"><img class="media-icons" src="images/socialicons/linkedin.png" alt="linkedin"></a>
-        <a href="mailto:sarahikeda@gmail.com"><img class="media-icons" src="images/socialicons/email.png" alt="email"></a></li>
-      </ul> 
+        <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
+        <a href="https://github.com/sarahikeda"><img class="media-icons" src="images/socialicons/github.png" alt="email"></a></li>
+      </ul>
     </div>
   </body>
 </html>
