Change name to all capitals

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,12 @@
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-      <title>Sarah Ing</title>
+      <title>SARAH ING</title>
   </head>
   <body>
     <div class="container">
       <div>
-        <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
+        <p class="name"><a href="https://sarahikeda.github.io"> SARAH ING</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
           <li id="projects"><a href="#projects">Coding Projects</a></li>
