--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -4,12 +4,12 @@
       <link rel="stylesheet" type="text/css" href="stylesheets/code-portfolio.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/portfolio.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-      <title>Sarah Ing</title>
+      <title>SARAH ING</title>
   </head>
   <body>
     <div class="container">
       <div>
-        <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
+        <p class="name"><a href="https://sarahikeda.github.io"> SARAH ING</a></p>
         <ul class="navright">
           <li id="about"><a href="https://sarahikeda.github.io/about">About</a></li>
 
