--- a/strangers.html
+++ b/strangers.html
@@ -5,7 +5,7 @@
       <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="stylesheets/index.js" ></script>
-      <title>Sarah Ing</title>
+      <title>SARAH ING</title>
   </head>
   <body>
     <div class="container">
