Change sad to capital letters for project

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -28,7 +28,7 @@
               <a href="https://sarahikeda.github.io/notanothersadlight/"><video width="200" height="140" autoplay loop>
               <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
             </video></a><br>
-            <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another Sad Light</b></a>
+            <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
             was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. The light changes color based on the sentiment of tweets from the distant past. <br>
             <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
           </p>
