Revise description of sad light'

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -29,7 +29,7 @@
               <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
             </video></a><br>
             <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
-            was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. The light changes color based on the sentiment of tweets from the distant past. <br>
+            was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
             <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
           </p>
         </div>
