Fix social media icon spacing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
        <ul class="social-media">
-        <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
+        <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" id="twitter" src="images/socialicons/twitter.png" alt="twitter"></a>
         <a href="https://www.linkedin.com/in/sarahing/"><img class="media-icons" src="images/socialicons/linkedin.png" alt="linkedin"></a>
         <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
         <a href="https://github.com/sarahikeda"><img class="media-icons" src="images/socialicons/github.png" alt="email"></a></li>
