Change wording and positioning

--- a/emotionalhotspot/index.html
+++ b/emotionalhotspot/index.html
@@ -6,18 +6,29 @@
     <title>Emotional Hotspots</title>
   </head>
   <body>
-    <h4>Emotional Hotspots</h4>
+    <div class="container">
+      <div>
+        <p class="name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
+        <ul class="navright">
+          <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
+          <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
+          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+        </ul>
+      </div>
+    </div>
     <div class="description">
+      <h4>Emotional Hotspots</h4>
       <p>"Emotional Hotspots is a work created in response to the Manchester International Festival's, <a href="mif.co.uk/mif17-events/what-is-the-city-but-the-people/">"What Is The City But The People."</a> The opening event of MIF brought together friends, neighbours and total strangers to serve as a self-portrait of the city.</p>
 
       <p>I reimagined the idea of the city's self-portrait, as an emotional composition. We all have emotions and the places we've had them, are memorable</p>
 
-      <p>I performed guerrilla research and conducted a survey to ask loved ones and strangers about their own emotional memories. Using the Google Maps API, I created a heat map of where people feel the most.</p>
+      <p>Guerrilla research and a survey were conducted to ask loved ones and strangers about their own emotional memories. Using the Google Maps API, I created a heat map of where people feel the most.</p>
 
-      <p>I wanted to create this work to indicate our sameness and our ability to unify. Underneath our differences, we feel the same.</p>
-    </div>
-    <div class="portfolio-stream">
-      <a href="http://sarahikeda.github.io/emotionalhotspot/map.html"><img id="hotspot" src="hotspot.png" alt="hotspot-map"></a>
+      <p>This piece was created to illustrate our sameness and our ability to unify. Underneath our differences, we feel the same.</p>
+      <div class="portfolio-stream">
+        <a href="http://sarahikeda.github.io/emotionalhotspot/map.html"><img id="hotspot" src="hotspot.png" alt="hotspot-map"></a>
+      </div>
     </div>
     <!-- <div class="press">
       <p>Exhibited</p>
