Add links for work

--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -37,12 +37,12 @@
       <img id="manchester" src="assets/manchester.jpg" alt="manchestertweet">
       <img id="friends" src="assets/lifelongfriends.jpg" alt="lifelongfriends">
     </div>
-    <!-- <div class="press">
+    <div class="press">
       <p>Exhibited</p>
       <ul>
-        <li>Manchester International Festival, July 2017</li>
-        <li>BBC Live, July 2017</li>
-    </div> -->
+        <li>Manchester International Festival, <a href="http://mif.co.uk/my-festival/creative-development/creative50/">Creative 50</a>, July 2017</li>
+        <li><a href="https://www.bbc.co.uk/events/e42fbp/live/c6cdgw?ns_mchannel=social&ns_source=twitter&ns_campaign=bbc_live&ns_linkname=595b8440e4b025ab5160f0d3%26Transforming%20APIs%20into%20art%26&ns_fee=0#post_595b8440e4b025ab5160f0d3">BBC Live, July 2017</a></li>
+    </div>
     <img id="creative50" src="assets/Creative50_trans.png" alt="creative50">
   </body>
 </html>
