--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -11,7 +11,7 @@
         <ul class="navright">
           <li id="about"><a href="https://sarahikeda.github.io/about">About</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
-          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+          <!-- <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a> -->
         </ul>
         <div class="container">
       </div>
