--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -13,7 +13,7 @@
           <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
           <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
-          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+          <!-- <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a> -->
         </ul>
       </div>
     </div>
