--- a/strangers.html
+++ b/strangers.html
@@ -16,7 +16,7 @@
 
             <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
             <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
-            <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+            <!-- <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a> -->
           </ul>
         </div>
       <div class="intro">
