--- a/emotionalhotspot/index.html
+++ b/emotionalhotspot/index.html
@@ -12,7 +12,7 @@
         <ul class="navright">
           <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
           <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
-          <li><a href="https://sarahikeda.github.io/notanothersadlight/SIResume.pdf" target="_blank">Resume</a></li>
+          <li><a href="https://sarahikeda.github.io/SIResume.pdf" target="_blank">Resume</a></li>
           <!-- <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a> -->
         </ul>
       </div>
