Remove InSession project, add image to farmers market project

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -45,15 +45,16 @@
               <br><a href="https://github.com/sarahikeda/bringchips"><b>Source Code</b></a><br>
             </p>
           </div>
-          <div class= "individual-project">
-            <p>
-              <a href="https://github.com/sarahikeda/InSession"><img class="project-img" src="images/insession.png" alt="Picture of Project"></a>
-              <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a>
-              is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.
-            </p>
-          </div>
+          <!-- <div class= "individual-project"> -->
+            <!-- <p> -->
+              <!-- <a href="https://github.com/sarahikeda/InSession"><img class="project-img" src="images/insession.png" alt="Picture of Project"></a> -->
+              <!-- <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a> -->
+              <!-- is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript. -->
+            <!-- </p> -->
+          <!-- </div> -->
           <div class= "individual-project">
                 <p>
+                  <a href="https://github.com/sarahikeda/farmersmarket"><img class="project-img" src="images/market.jpg" alt="Picture of Potluck Project"></a>
                   <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
                   is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
                   <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
