--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -54,7 +54,7 @@
           <!-- </div> -->
           <div class= "individual-project">
                 <p>
-                  <a href="https://github.com/sarahikeda/farmersmarket"><img class="project-img" src="images/market.jpg" alt="Picture of Potluck Project"></a>
+                  <a href="https://github.com/sarahikeda/farmersmarket"><img class="project-img" src="images/market.jpg" alt="Picture of Market Project"></a>
                   <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
                   is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
                   <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
